# quran-transcript

./: .gitignore  README.md  merge_uthmani_imaley.py  parse_quranic_corpus.py  process_quran_alphabet.py  process_uthmani_alphabet.py  pyproject.toml  quran_script_map_stats.py  requirements.txt  server.py  streamlit_app.py  style.css  test_aya_obj.py  test_server.py  visualise_letters.py
.github/workflows/: tests.yaml
app/: alphabet.py  api_utils.py  quran_utils.py  utils.py
quran-script/: quran-alphabet.json
src/quran_transcript/: __init__.py  alphabet.py  quran-script  tasmeea.py  utils.py
src/quran_transcript/phonetic/: moshaf_attributes.py
src/quran_transcript/phonetics/: conv_base_operation.py  moshaf_attributes.py  operations.py  phonetizer.py  sifa.py
tests/: aya_pytest.py  phonetics_pytest.py  test_aya_obj.py  test_phonems_chunker.py  test_search_streamlit.py  test_tasmeea.py  test_tasmeea_multi.py
