# main docs of setup tools: https://setuptools.pypa.io/en/latest/userguide/quickstart.html
# pypip tutoral: https://packaging.python.org/en/latest/tutorials/packaging-projects/
# Video Tutorial: https://www.youtube.com/watch?v=v6tALyc4C10
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
include-package-data = true # to include data directories

[project]
name = "quran_transcript"
version = "0.0.1"
authors = [
  { name="Abdullah Aml", email="abdullahamlyossef@gmail.com" },
]
description = "Phonatic transcript of the Holy Quran with additional utils"
readme = "README.md"
dependencies = [
    "levenshtein>=0.27.1",
    "pydantic>=2.10.0",
    "xmltodict",
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


# Optional dependencies
[project.optional-dependencies]

test = [
  "pytest",
]

[project.urls]
Homepage = "https://github.com/Abdullahaml1/quran-transcript"
Issues = "https://github.com/Abdullahaml1/quran-transcript/issues"

# for addint data: https://setuptools.pypa.io/en/latest/userguide/datafiles.html#package-data
[tool.setuptools.package-data]
quran_transcript = ["quran-script/*"]
